<resources>
    <string name="app_name">MentalGame</string>
    <string name="button_play" translatable="false">Play</string>
    <string name="button_score">Meilleurs Score</string>
    <string name="button_a_propos">A Propos</string>
    <string name="button_perso">Personnage</string>
    <string name="text_vide">Vide</string>
    <string name="button_0" translatable="false">0</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_supr" translatable="false">enlever du text</string>
    <string name="button_valider">Valider</string>
    <string name="label_meilleurScore" translatable="false">Meilleurs scores</string>
    <string name="about_title" translatable="false">A propos</string>
    <string name="creator">Créateur : Nicolas Delevingne / Corentin Delafosse</string>
    <string name="surplus">Pour offrir une expérience de jeu plus immersive, il est possible d ajouter un choix de personnages sur la page d accueil. Une fois que l utilisateur a fait son choix, les informations relatives au personnage sélectionné sont stockées dans une variable. Dans le jeu, le personnage ainsi que le fond sont modifiés en fonction du choix effectué, pour une expérience de jeu plus personnalisée. Le jeu consiste à rentrer la bonne réponse du calcul afficher en haut. une animation pour chaque personnage a été crée lors de l attente, de la réussite d une réponse, ou encore lors de la fin du timer. Le timer revient à 30 sec à chaque bonne réponse et s arrête à 0. Il y a la possibilité de regarder le meilleur score enregistré dans l appareil.</string>
    <string name="errors" translatable="false">ERROR</string>
    <string name="aucun_score">AUCUN SCORE</string>
    <string name="best_score">MEILLEUR SCORE</string>
    <string name="fonction">Fonctionnalité</string>

</resources>