<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_a_propos"
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_a_propos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_perso" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="241dp"
        android:layout_height="95dp"
        android:layout_marginTop="324dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_play"
        app:layout_constraintBottom_toTopOf="@+id/button_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_perso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button_perso"
        app:layout_constraintBottom_toTopOf="@+id/button_a_propos"
        app:layout_constraintEnd_toEndOf="@+id/button_score"
        app:layout_constraintStart_toStartOf="@+id/button_score"
        app:layout_constraintTop_toBottomOf="@+id/button_score" />

    <Button
        android:id="@+id/button_score"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:text="@string/button_score"
        app:layout_constraintBottom_toTopOf="@+id/button_perso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play" />

</androidx.constraintlayout.widget.ConstraintLayout>